# geekhouse-esp

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  GEMINI.md  PROJECT_PLAN.md  README.md  sdkconfig.defaults
docs/: notes.md  phase2-learning-tasks.md  phase3-learning-tasks.md  vscode-esp-idf-setup.md
main/: CMakeLists.txt  Kconfig.projbuild  actuators.c  actuators.h  display_task.c  display_task.h  http_server.c  http_server.h  led_task.c  led_task.h  main.c  network_task.c  network_task.h  reporter_task.c  reporter_task.h  sensor_data_shared.c  sensor_data_shared.h  sensor_task.c  sensor_task.h  sensors.c  sensors.h  stats_task.c  stats_task.h  time_sync.c  time_sync.h  wifi_config.c  wifi_config.h  wifi_manager.c  wifi_manager.h
